crates/analyzer/tests/snapshots/errors__invalid_struct_pub_qualifier.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: failed to parse struct definition
  ┌─ compile_errors/invalid_struct_pub_qualifier.fe:3:4
  │
3 │ pub}
  │    ^ unexpected token


